# chaum-pedersen-zkp

./: Cargo.toml  README.md  build.rs  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: test_python.yml  test_rust.yml
docker/: Dockerfile
python/: README.md  client.py  conftest.py  main.py  server.py
python/proto/: zkp.proto  zkp_pb2.py  zkp_pb2.pyi  zkp_pb2_grpc.py
python/test/: test_chaum_pedersen.py  test_generator.py  test_prime.py  test_schnorr.py
python/zkrypto/: __init__.py  chaum_pedersen.py  generator.py  group.py  prime.py  schnorr.py
src/: client.rs  main.rs  server.rs  utils.rs  zkrypto.rs
src/proto/: zkp.proto
src/zkrypto/: chaum_pedersen.rs  generator.rs  mod.rs  prime.rs
