[package]
name = "zkp"
version = "0.1.0"
edition = "2021"
authors = ["jcabrero <jose@cabreroholgueras.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.16"
num-iter = "0.1.43"
log = "0.4.20"
env_logger = "0.10.0"
tonic = "0.9.2"
prost = "0.11.9"
tokio = {version ="1.32.0", features = ["full"]}
async-trait = "0.1.73"

[build-dependencies]
tonic-build = "0.9.2"

# Server binary
[[bin]]
name = "server"
path = "src/server.rs"

# Client binary
[[bin]]
name = "client"
path = "src/client.rs"
